# my-ralphy

./: .gitignore  CLAUDE.md  README.md  awesome.md  inspirations.md  pyproject.toml
docs/plans/: 2026-01-21-ralph-loop-design.md
examples/: prd.json
knowledge/ai-conversation/: 2026.1.15.md  2026.1.16.md
knowledge/article/: Implementing a Ralph Wiggum Loop: The Secret is Session Markers.md
src/my_ralphy/: __init__.py  cli.py  display.py  executor.py  logger.py  models.py  task_manager.py
src/my_ralphy/modes/: __init__.py  continuous.py  interactive.py  task_file.py
