[project]
name = "my-ralphy"
version = "0.1.0"
description = "Claude Code 循环执行器"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ralphy = "my_ralphy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_ralphy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
